byte/parser/ByteParser.py
# Generated from byte/Byte.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ByteParser ( Parser ):

    grammarFileName = "Byte.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'in'", "'for'", "'new'", "'use'", 
                     "'fn'", "'else'", "'class'", "'mut'", "'defer'", "'return'", 
                     "'static'", "'while'", "'break'", "'continue'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", 
                     "'!'", "'.'", "','", "'='", "'('", "')'", "'{'", "'}'", 
                     "'->'", "'&'", "'..'" ]

    symbolicNames = [ "<INVALID>", "IF", "IN", "FOR", "NEW", "USE", "FUNC", 
                      "ELSE", "CLASS", "MUTABLE", "DEFER", "RETURN", "STATIC", 
                      "WHILE", "BREAK", "CONTINUE", "INT", "FLOAT", "STRING", 
                      "STRING_POINTER", "BOOL", "ID", "ADD", "SUB", "MUL", 
                      "DIV", "MOD", "EEQ", "NEQ", "GT", "LT", "GTE", "LTE", 
                      "AND", "OR", "NOT", "DOT", "COMMA", "ASSIGN", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "RETURNS", "AMPERSAND", 
                      "DOUBLEDOT", "COMMENT", "MULTILINE_COMMENT", "WHITESPACE" ]

    RULE_program = 0
    RULE_type = 1
    RULE_stmt = 2
    RULE_bodyStmts = 3
    RULE_body = 4
    RULE_ifStmt = 5
    RULE_elseifStmt = 6
    RULE_elseStmt = 7
    RULE_whileStmt = 8
    RULE_useStmt = 9
    RULE_deferStmt = 10
    RULE_forRangeStmt = 11
    RULE_funcName = 12
    RULE_genericParams = 13
    RULE_funcAssign = 14
    RULE_varAssign = 15
    RULE_propertyDecl = 16
    RULE_methodDecl = 17
    RULE_classAssign = 18
    RULE_classDecl = 19
    RULE_arg = 20
    RULE_args = 21
    RULE_param = 22
    RULE_params = 23
    RULE_expr = 24
    RULE_ternary = 25
    RULE_logical = 26
    RULE_relational = 27
    RULE_addition = 28
    RULE_multiplication = 29
    RULE_unary = 30
    RULE_postfix = 31
    RULE_primary = 32

    ruleNames =  [ "program", "type", "stmt", "bodyStmts", "body", "ifStmt", 
                   "elseifStmt", "elseStmt", "whileStmt", "useStmt", "deferStmt", 
                   "forRangeStmt", "funcName", "genericParams", "funcAssign", 
                   "varAssign", "propertyDecl", "methodDecl", "classAssign", 
                   "classDecl", "arg", "args", "param", "params", "expr", 
                   "ternary", "logical", "relational", "addition", "multiplication", 
                   "unary", "postfix", "primary" ]

    EOF = Token.EOF
    IF=1
    IN=2
    FOR=3
    NEW=4
    USE=5
    FUNC=6
    ELSE=7
    CLASS=8
    MUTABLE=9
    DEFER=10
    RETURN=11
    STATIC=12
    WHILE=13
    BREAK=14
    CONTINUE=15
    INT=16
    FLOAT=17
    STRING=18
    STRING_POINTER=19
    BOOL=20
    ID=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    EEQ=27
    NEQ=28
    GT=29
    LT=30
    GTE=31
    LTE=32
    AND=33
    OR=34
    NOT=35
    DOT=36
    COMMA=37
    ASSIGN=38
    LPAREN=39
    RPAREN=40
    LBRACE=41
    RBRACE=42
    RETURNS=43
    AMPERSAND=44
    DOUBLEDOT=45
    COMMENT=46
    MULTILINE_COMMENT=47
    WHITESPACE=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ByteParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ByteParser.StmtContext)
            else:
                return self.getTypedRuleContext(ByteParser.StmtContext,i)


        def getRuleIndex(self):
            return ByteParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ByteParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 584132277114) != 0):
                self.state = 66
                self.stmt()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(ByteParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ByteParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(ByteParser.TypeContext,0)


        def AMPERSAND(self):
            return self.getToken(ByteParser.AMPERSAND, 0)

        def getRuleIndex(self):
            return ByteParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)



    def type_(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ByteParser.TypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_type, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(ByteParser.ID)
            self._ctx.stop = self._input.LT(-1)
            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ByteParser.TypeContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_type)
                    self.state = 77
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 78
                    self.match(ByteParser.AMPERSAND) 
                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varAssign(self):
            return self.getTypedRuleContext(ByteParser.VarAssignContext,0)


        def funcAssign(self):
            return self.getTypedRuleContext(ByteParser.FuncAssignContext,0)


        def classAssign(self):
            return self.getTypedRuleContext(ByteParser.ClassAssignContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(ByteParser.WhileStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(ByteParser.IfStmtContext,0)


        def useStmt(self):
            return self.getTypedRuleContext(ByteParser.UseStmtContext,0)


        def forRangeStmt(self):
            return self.getTypedRuleContext(ByteParser.ForRangeStmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(ByteParser.ExprContext,0)


        def getRuleIndex(self):
            return ByteParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = ByteParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.varAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.funcAssign()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.classAssign()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.whileStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.ifStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.useStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 90
                self.forRangeStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 91
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyStmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ByteParser.RULE_bodyStmts

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BreakContext(BodyStmtsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ByteParser.BodyStmtsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BREAK(self):
            return self.getToken(ByteParser.BREAK, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak" ):
                return visitor.visitBreak(self)
            else:
                return visitor.visitChildren(self)


    class BodyStmtContext(BodyStmtsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ByteParser.BodyStmtsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stmt(self):
            return self.getTypedRuleContext(ByteParser.StmtContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBodyStmt" ):
                return visitor.visitBodyStmt(self)
            else:
                return visitor.visitChildren(self)


    class ContinueContext(BodyStmtsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ByteParser.BodyStmtsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONTINUE(self):
            return self.getToken(ByteParser.CONTINUE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinue" ):
                return visitor.visitContinue(self)
            else:
                return visitor.visitChildren(self)


    class ReturnContext(BodyStmtsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ByteParser.BodyStmtsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(ByteParser.RETURN, 0)
        def expr(self):
            return self.getTypedRuleContext(ByteParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)



    def bodyStmts(self):

        localctx = ByteParser.BodyStmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bodyStmts)
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 4, 5, 6, 8, 9, 12, 13, 16, 17, 18, 19, 20, 21, 22, 23, 35, 39]:
                localctx = ByteParser.BodyStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.stmt()
                pass
            elif token in [11]:
                localctx = ByteParser.ReturnContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(ByteParser.RETURN)
                self.state = 97
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 96
                    self.expr()


                pass
            elif token in [14]:
                localctx = ByteParser.BreakContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.match(ByteParser.BREAK)
                pass
            elif token in [15]:
                localctx = ByteParser.ContinueContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.match(ByteParser.CONTINUE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(ByteParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ByteParser.RBRACE, 0)

        def bodyStmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ByteParser.BodyStmtsContext)
            else:
                return self.getTypedRuleContext(ByteParser.BodyStmtsContext,i)


        def getRuleIndex(self):
            return ByteParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = ByteParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(ByteParser.LBRACE)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 584132328314) != 0):
                self.state = 104
                self.bodyStmts()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(ByteParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ByteParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(ByteParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(ByteParser.BodyContext,0)


        def elseifStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ByteParser.ElseifStmtContext)
            else:
                return self.getTypedRuleContext(ByteParser.ElseifStmtContext,i)


        def elseStmt(self):
            return self.getTypedRuleContext(ByteParser.ElseStmtContext,0)


        def getRuleIndex(self):
            return ByteParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = ByteParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(ByteParser.IF)
            self.state = 113
            self.expr()
            self.state = 114
            self.body()
            self.state = 118
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 115
                    self.elseifStmt() 
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 121
                self.elseStmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseifStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(ByteParser.ELSE, 0)

        def IF(self):
            return self.getToken(ByteParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(ByteParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(ByteParser.BodyContext,0)


        def getRuleIndex(self):
            return ByteParser.RULE_elseifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseifStmt" ):
                return visitor.visitElseifStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseifStmt(self):

        localctx = ByteParser.ElseifStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ByteParser.ELSE)
            self.state = 125
            self.match(ByteParser.IF)
            self.state = 126
            self.expr()
            self.state = 127
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(ByteParser.ELSE, 0)

        def body(self):
            return self.getTypedRuleContext(ByteParser.BodyContext,0)


        def getRuleIndex(self):
            return ByteParser.RULE_elseStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStmt" ):
                return visitor.visitElseStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseStmt(self):

        localctx = ByteParser.ElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elseStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(ByteParser.ELSE)
            self.state = 130
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(ByteParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(ByteParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(ByteParser.BodyContext,0)


        def getRuleIndex(self):
            return ByteParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = ByteParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(ByteParser.WHILE)
            self.state = 133
            self.expr()
            self.state = 134
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(ByteParser.USE, 0)

        def STRING(self):
            return self.getToken(ByteParser.STRING, 0)

        def getRuleIndex(self):
            return ByteParser.RULE_useStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseStmt" ):
                return visitor.visitUseStmt(self)
            else:
                return visitor.visitChildren(self)




    def useStmt(self):

        localctx = ByteParser.UseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_useStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(ByteParser.USE)
            self.state = 137
            self.match(ByteParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeferStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFER(self):
            return self.getToken(ByteParser.DEFER, 0)

        def expr(self):
            return self.getTypedRuleContext(ByteParser.ExprContext,0)


        def getRuleIndex(self):
            return ByteParser.RULE_deferStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeferStmt" ):
                return visitor.visitDeferStmt(self)
            else:
                return visitor.visitChildren(self)




    def deferStmt(self):

        localctx = ByteParser.DeferStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_deferStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(ByteParser.DEFER)
            self.state = 140
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForRangeStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(ByteParser.FOR, 0)

        def ID(self):
            return self.getToken(ByteParser.ID, 0)

        def IN(self):
            return self.getToken(ByteParser.IN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ByteParser.ExprContext)
            else:
                return self.getTypedRuleContext(ByteParser.ExprContext,i)


        def DOUBLEDOT(self, i:int=None):
            if i is None:
                return self.getTokens(ByteParser.DOUBLEDOT)
            else:
                return self.getToken(ByteParser.DOUBLEDOT, i)

        def body(self):
            return self.getTypedRuleContext(ByteParser.BodyContext,0)


        def getRuleIndex(self):
            return ByteParser.RULE_forRangeStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForRangeStmt" ):
                return visitor.visitForRangeStmt(self)
            else:
                return visitor.visitChildren(self)




    def forRangeStmt(self):

        localctx = ByteParser.ForRangeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_forRangeStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(ByteParser.FOR)
            self.state = 143
            self.match(ByteParser.ID)
            self.state = 144
            self.match(ByteParser.IN)
            self.state = 145
            self.expr()
            self.state = 146
            self.match(ByteParser.DOUBLEDOT)
            self.state = 147
            self.expr()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 148
                self.match(ByteParser.DOUBLEDOT)
                self.state = 149
                self.expr()


            self.state = 152
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.extend_type = None # TypeContext
            self.op = None # Token

        def ID(self):
            return self.getToken(ByteParser.ID, 0)

        def DOT(self):
            return self.getToken(ByteParser.DOT, 0)

        def type_(self):
            return self.getTypedRuleContext(ByteParser.TypeContext,0)


        def ADD(self):
            return self.getToken(ByteParser.ADD, 0)

        def SUB(self):
            return self.getToken(ByteParser.SUB, 0)

        def MUL(self):
            return self.getToken(ByteParser.MUL, 0)

        def DIV(self):
            return self.getToken(ByteParser.DIV, 0)

        def MOD(self):
            return self.getToken(ByteParser.MOD, 0)

        def EEQ(self):
            return self.getToken(ByteParser.EEQ, 0)

        def NEQ(self):
            return self.getToken(ByteParser.NEQ, 0)

        def GT(self):
            return self.getToken(ByteParser.GT, 0)

        def LT(self):
            return self.getToken(ByteParser.LT, 0)

        def GTE(self):
            return self.getToken(ByteParser.GTE, 0)

        def LTE(self):
            return self.getToken(ByteParser.LTE, 0)

        def AND(self):
            return self.getToken(ByteParser.AND, 0)

        def OR(self):
            return self.getToken(ByteParser.OR, 0)

        def NOT(self):
            return self.getToken(ByteParser.NOT, 0)

        def NEW(self):
            return self.getToken(ByteParser.NEW, 0)

        def getRuleIndex(self):
            return ByteParser.RULE_funcName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncName" ):
                return visitor.visitFuncName(self)
            else:
                return visitor.visitChildren(self)




    def funcName(self):

        localctx = ByteParser.FuncNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcName)
        self._la = 0 # Token type
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 154
                    localctx.extend_type = self.type_(0)
                    self.state = 155
                    self.match(ByteParser.DOT)


                self.state = 159
                self.match(ByteParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 68715282432) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 161
                    localctx.extend_type = self.type_(0)
                    self.state = 162
                    self.match(ByteParser.DOT)


                self.state = 166
                self.match(ByteParser.NEW)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GenericParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(ByteParser.LT, 0)
